--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,7 +39,8 @@
         <ImageView
             android:id="@+id/ivAvatar"
             android:layout_width="128dp"
-            android:layout_height="128dp"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
             app:layout_constraintBottom_toTopOf="@id/viewBackground"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
